[tool.poetry]
name = "asa-config"
version = "0.1.0"
description = "A toolbelt for parsing Cisco ASA configuration scripts and emitting configuration objects"
authors = ["hacksparr0w"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.5.2"
jsonref = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
devtools = "^0.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
